--- a/index.html
+++ b/index.html
@@ -396,13 +396,13 @@
         bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
-        background: white;
+        background:#f0f0f0;
         color: #333;
         padding: 10px 15px;
         width: 80%;
         max-width: 320px;
-        border-radius: 8px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         text-align: center;
         font-family: Arial, sans-serif;
         font-size: 13px;
