--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     transform: translate(-50%, -50%);
     width: 90%;
     max-width: 500px;
-    background: #f8f9fa;
+    background:linear-gradient(135deg, #E0F7FA 0%, #F1F8E9 100%);
     color: #333;
     padding: 32px; /* Increased padding for better spacing */
     text-align: center;
